--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <li class="li1">&lt;body&gt;</li>
   <li class="li2"><br></li>
   <li class="li1">&lt;h1&gt;James Mugo Langan&lt;/h1&gt;</li>
-  <li class="li1">&lt;p&gt;I am a translator between Spanish, French, Portuguese, and English. You can shoot me an email at jml.langan [at] gmail [dot] or find me on Twitter @jamesmugolangan.&lt;/p&gt;</li>
+  <li class="li1">&lt;p&gt;I am a translator between Spanish, French, Portuguese, and English. You can shoot me an email at jml.langan [at] gmail [dot] com or find me on Twitter @jamesmugolangan.&lt;/p&gt;</li>
   <li class="li2"><br></li>
   <li class="li1">&lt;/body&gt;</li>
   <li class="li1">&lt;/html&gt;</li>
